--- a/Array.ipynb
+++ b/Array.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unsorted Array"
+    "# 1. Unsorted Array"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Search"
+    "## I. Search"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Insert at end"
+    "## II. Insert at end"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Delete an element"
+    "## III. Delete an element"
    ]
   },
   {
@@ -183,13 +183,6 @@
    "source": [
     "arr"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
