--- a/Stack.ipynb
+++ b/Stack.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I. Stack Using Array"
+    "## I. Array"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II. Stack Using Linked List"
+    "## II. Linked List"
    ]
   },
   {
@@ -159,11 +159,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## III. Deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "s = deque()\n",
+    "s.append(3)\n",
+    "s.append(4)\n",
+    "s.append(5)\n",
+    "s.popleft()"
+   ]
   }
  ],
  "metadata": {
