adding binary tree

--- a/Stack.ipynb
+++ b/Stack.ipynb
@@ -167,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,8 @@
     "s.append(3)\n",
     "s.append(4)\n",
     "s.append(5)\n",
-    "s.popleft()"
+    "s.popleft()\n",
+    "s[0]"
    ]
   }
  ],
