adding binary heap

--- a/BinarySearchTree.ipynb
+++ b/BinarySearchTree.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Basics"
+    "## I. Basics"
    ]
   },
   {
@@ -29,12 +29,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Insertion"
+    "## II. Insertion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -126,12 +126,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Search"
+    "## III. Search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
