--- a/Hash.ipynb
+++ b/Hash.ipynb
@@ -4,46 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. LinkedList Implementation"
+    "# 1. Hash"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I. Basics"
+    "## I. Handling Collisioin"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Accessing an element in an array is fast, while Linked list takes linear time, so it is quite a bit slower.\n",
-    "2. The requirement of memory is less due to actual data being stored within the index in the array. As against, there is a need for more memory in Linked Lists due to storage of additional next and previous referencing elements."
+    "### Separate Chaining"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let the hash table to point to a linked list of records that have the same hash value. It is good when the number of duplicates of hash values is unknown. However, the time and space complexity is high."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class LinkNode:\n",
-    "    def __init__(self, val):\n",
-    "        self.val = val\n",
-    "        self.next = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class LinkedList:\n",
-    "    def __init__(self):\n",
-    "        self.head = None"
-   ]
+   "source": []
   }
  ],
  "metadata": {
