--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -4,45 +4,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. LinkedList Implementation"
+    "# 1. Matrix Implementation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I. Basics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Accessing an element in an array is fast, while Linked list takes linear time, so it is quite a bit slower.\n",
-    "2. The requirement of memory is less due to actual data being stored within the index in the array. As against, there is a need for more memory in Linked Lists due to storage of additional next and previous referencing elements."
+    "## I. Brute Force Search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LinkNode:\n",
-    "    def __init__(self, val):\n",
-    "        self.val = val\n",
-    "        self.next = None"
+    "def search(m, element):\n",
+    "    for i, row in enumerate(m):\n",
+    "        for j, column in enumerate(row):\n",
+    "            if m[i][j] == element:\n",
+    "                return (i, j)\n",
+    "    \n",
+    "    return (-1, -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LinkedList:\n",
-    "    def __init__(self):\n",
-    "        self.head = None"
+    "mat = [ [10, 20, 30, 40], \n",
+    "        [15, 25, 35, 45], \n",
+    "        [27, 29, 37, 48], \n",
+    "        [32, 33, 39, 50] ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search(mat, 29)"
    ]
   }
  ],
