--- a/Queue.ipynb
+++ b/Queue.ipynb
@@ -85,6 +85,93 @@
     "q.append(2)\n",
     "q.pop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III. Linked List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "        self.next = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyQueue:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        \n",
+    "    # Method to add an item to the queue\n",
+    "    def push(self, item):\n",
+    "        if not self.head: \n",
+    "            self.head = Node(item)\n",
+    "            return\n",
+    "\n",
+    "        root = self.head\n",
+    "        while root.next:\n",
+    "            root = root.next\n",
+    "        root.next = Node(item)\n",
+    "    \n",
+    "    # Method to remove an item from queue\n",
+    "    def pop(self):\n",
+    "        if not self.head: return -1\n",
+    "        if not self.head.next: return self.head\n",
+    "        \n",
+    "        new_head = self.head.next\n",
+    "        p = self.head\n",
+    "        self.head = new_head\n",
+    "\n",
+    "        return p.val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = MyQueue()\n",
+    "q.push(1)\n",
+    "q.push(2)\n",
+    "q.push(7)\n",
+    "q.push(6)\n",
+    "print(q.pop())\n",
+    "print(q.pop())\n",
+    "print(q.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
