--- a/Array.ipynb
+++ b/Array.ipynb
@@ -183,6 +183,236 @@
    "source": [
     "arr"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Sorted Array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## I. Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [1,2,3,4,5,6]\n",
+    "num = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(num, arr):\n",
+    "    for idx, x in enumerate(arr):\n",
+    "        if num == x:\n",
+    "            return idx\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search(num, arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binary Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mid_point = len(arr) // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search(arr, mid_point, num):\n",
+    "    if arr[mid_point] == num or arr[mid_point] is None:\n",
+    "        return mid_point\n",
+    "    \n",
+    "    left = mid_point - 1\n",
+    "    right = mid_point + 1\n",
+    "    \n",
+    "    if num < arr[mid_point]:\n",
+    "        return binary_search(arr, left, num)\n",
+    "    else:\n",
+    "        return binary_search(arr, right, num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(arr, mid_point, num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## II. Insert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [1,3,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert(arr, num):\n",
+    "    idx_back = 1\n",
+    "    \n",
+    "    if len(arr) == 0:\n",
+    "        return [num]\n",
+    "    elif arr[idx_front] > num:\n",
+    "        return [num] + arr\n",
+    "    elif arr[len(arr) - 1] < num:\n",
+    "        return arr + [num]\n",
+    "    \n",
+    "    for idx in range(len(arr) - 1):\n",
+    "        if num > arr[idx] and num <= arr[idx_back]:\n",
+    "            arr.insert(idx_back, num)\n",
+    "            return arr\n",
+    "        idx_back += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4, 5, 6, 6]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insert(arr, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III. Delete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete(arr, num):\n",
+    "    if not arr: return -1\n",
+    "    \n",
+    "    for idx, x in enumerate(arr):\n",
+    "        if x == num:\n",
+    "            if idx == len(arr) - 1: return arr[:idx]\n",
+    "            \n",
+    "            return arr[:idx] + arr[idx + 1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [1,2,3,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 6]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delete(arr, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
