--- a/Array.ipynb
+++ b/Array.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
     "    \n",
     "    if len(arr) == 0:\n",
     "        return [num]\n",
-    "    elif arr[idx_front] > num:\n",
+    "    elif arr[0] > num:\n",
     "        return [num] + arr\n",
     "    elif arr[len(arr) - 1] < num:\n",
     "        return arr + [num]\n",
@@ -337,16 +337,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3, 4, 5, 6, 6]"
+       "[1, 2, 3, 4, 5, 6, 6]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "[1, 2, 3, 5, 6]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,13 +406,6 @@
    "source": [
     "delete(arr, 4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
