--- a/Array.ipynb
+++ b/Array.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,9 +324,11 @@
     "    if len(arr) == 0:\n",
     "        return [num]\n",
     "    elif arr[0] > num:\n",
-    "        return [num] + arr\n",
+    "        arr.insert(0, num)\n",
+    "        return arr\n",
     "    elif arr[len(arr) - 1] < num:\n",
-    "        return arr + [num]\n",
+    "        arr.append(num)\n",
+    "        return arr\n",
     "    \n",
     "    for idx in range(len(arr) - 1):\n",
     "        if num > arr[idx] and num <= arr[idx_back]:\n",
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +348,7 @@
        "[1, 2, 3, 4, 5, 6, 6]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
