--- a/Graph.ipynb
+++ b/Graph.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## II. Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BFS "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import deque, defaultdict\n",
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.graph = defaultdict(list)\n",
+    "\n",
+    "    def add_edge(self, v, u):\n",
+    "        self.graph[v].append(u)\n",
+    "        \n",
+    "    def bfs(self, node):\n",
+    "        d = deque()\n",
+    "        d.append(node)\n",
+    "        visited = set()\n",
+    "\n",
+    "        while d:\n",
+    "            p = d.popleft()\n",
+    "            print(p)\n",
+    "            for n in self.graph[p]:\n",
+    "                if n not in visited:\n",
+    "                    d.append(n)\n",
+    "                    visited.add(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = Graph() \n",
+    "g.add_edge(0, 1) \n",
+    "g.add_edge(0, 2) \n",
+    "g.add_edge(1, 2) \n",
+    "g.add_edge(2, 0) \n",
+    "g.add_edge(2, 3) \n",
+    "g.add_edge(3, 3) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "3\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "g.bfs(2)"
+   ]
   }
  ],
  "metadata": {
