addibg bst and bs algo

--- a/BinarySearchTree.ipynb
+++ b/BinarySearchTree.ipynb
@@ -167,6 +167,81 @@
    "source": [
     "search(r, 20)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IV. Delete"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Node to be deleted has two children: Find inorder successor of the node. Copy contents of the inorder successor to the node and delete the inorder successor. Note that inorder predecessor can also be used. The important thing to note is, inorder successor is needed only when right child is not empty. In this particular case, inorder successor can be obtained by finding the minimum value in right child of the node._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_min(node):\n",
+    "    while node.left is not None:\n",
+    "        node = node.left\n",
+    "    return node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete(node, key):\n",
+    "    val = node.val\n",
+    "    \n",
+    "    if node is None: return node\n",
+    "    \n",
+    "    if val < node.val:\n",
+    "        delete(node.left, val)\n",
+    "    elif val > node.val:\n",
+    "        delete(node.right, val)\n",
+    "    else:\n",
+    "        if node.left is None:\n",
+    "            temp = node.right\n",
+    "            return temp\n",
+    "        elif node.right is None:\n",
+    "            temp = node.left\n",
+    "            return temp\n",
+    "        else:\n",
+    "            temp = get_min(node.right)\n",
+    "            node.val = temp.val\n",
+    "            node.right = delete(node.right, temp.val)\n",
+    "    return node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delete(r,30).val"
+   ]
   }
  ],
  "metadata": {
