--- a/BinaryTree.ipynb
+++ b/BinaryTree.ipynb
@@ -43,11 +43,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# II. Basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. The maximum number of nodes at level ‘l’ of a binary tree is 2^l.\n",
+    "2. Maximum number of nodes in a binary tree of height ‘h’ is 2^h – 1\n",
+    "\n",
+    "> A tree has maximum nodes if all levels have maximum nodes. So maximum number of nodes in a binary tree of height h is 1 + 2 + 4 + .. + 2^(h-1). This is a simple geometric series with h terms and sum of this series is 2^h – 1. \n",
+    "\n",
+    "> In some books, height of the root is considered as 0. In this convention, the above formula becomes 2^(h+1) – 1\n",
+    "\n",
+    "3. In a Binary Tree with N nodes, minimum possible height or minimum number of levels is Log2(N+1)\n",
+    "4. A Binary Tree with L leaves has at least Log2 (L) + 1 levels\n",
+    "5. In Binary tree where every node has 0 or 2 children, number of leaf nodes is always one more than nodes with two children."
+   ]
   }
  ],
  "metadata": {
