--- a/Graph.ipynb
+++ b/Graph.ipynb
@@ -195,6 +195,144 @@
    "source": [
     "g.bfs(2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.graph = defaultdict(list)\n",
+    "\n",
+    "    def add_edge(self, v, u):\n",
+    "        self.graph[v].append(u)\n",
+    "        \n",
+    "    def dfs(self, node, visited=None):\n",
+    "        if visited is None:\n",
+    "            visited = set()\n",
+    "        visited.add(node)\n",
+    "\n",
+    "        print(node)\n",
+    "        \n",
+    "        for n in self.graph[node]:\n",
+    "            if n not in visited:\n",
+    "                self.dfs(n, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = Graph() \n",
+    "g.add_edge(0, 1) \n",
+    "g.add_edge(0, 2) \n",
+    "g.add_edge(1, 2) \n",
+    "g.add_edge(2, 0) \n",
+    "g.add_edge(2, 3) \n",
+    "g.add_edge(3, 3) \n",
+    "g.dfs(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_The above code traverses only the vertices reachable from a given source vertex. All the vertices may not be reachable from a given vertex as in the case of a Disconnected graph. To do complete DFS traversal of such graphs, run DFS from all unvisited nodes after a DFS._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Algorithm:\n",
+    "1. Create a recursive function that takes the index of node and a visited array.\n",
+    "2. Mark the current node as visited and print the node.\n",
+    "3. Run a loop from 0 to number of vertices and check if the node is unvisited in previous DFS then call the recursive function with current node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.graph = defaultdict(list)\n",
+    "\n",
+    "    def add_edge(self, v, u):\n",
+    "        self.graph[v].append(u)\n",
+    "\n",
+    "    def util(self, node, visited):\n",
+    "        visited.add(node)\n",
+    "        print(node)\n",
+    "        \n",
+    "        for n in self.graph[node]:\n",
+    "            if not n in visited:\n",
+    "                self.util(n, visited)\n",
+    "        \n",
+    "    def dfs(self):\n",
+    "        visited = set()        \n",
+    "        for n in range(len(self.graph)):\n",
+    "            if not n in visited:\n",
+    "                self.util(n, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = Graph() \n",
+    "g.add_edge(0, 1) \n",
+    "g.add_edge(0, 2) \n",
+    "g.add_edge(1, 2) \n",
+    "g.add_edge(2, 0) \n",
+    "g.add_edge(2, 3) \n",
+    "g.add_edge(3, 3) \n",
+    "g.dfs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
