--- a/BinaryTree.ipynb
+++ b/BinaryTree.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# II. Basics"
+    "## II. Basics"
    ]
   },
   {
@@ -63,6 +63,94 @@
     "3. In a Binary Tree with N nodes, minimum possible height or minimum number of levels is Log2(N+1)\n",
     "4. A Binary Tree with L leaves has at least Log2 (L) + 1 levels\n",
     "5. In Binary tree where every node has 0 or 2 children, number of leaf nodes is always one more than nodes with two children."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III. Types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Full Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Binary Tree is a full binary tree if every node has 0 or 2 children. A full binary tree is a binary tree in which all nodes except leaf nodes have two children. In a Full Binary Tree, number of leaf nodes is the number of internal nodes plus 1: L = I + 1, where L = Number of leaf nodes, I = Number of internal nodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complete Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Binary Tree is a complete Binary Tree if all the levels are completely filled except possibly the last level and the last level has all keys as left as possible"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perfect Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Binary tree is a Perfect Binary Tree in which all the internal nodes have two children and all leaf nodes are at the same level. A Perfect Binary Tree of height h (where height is the number of nodes on the path from the root to leaf) has 2^h – 1 node."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Balanced Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A binary tree is balanced if the height of the tree is O(Log n) where n is the number of nodes. Balanced Binary Search trees are performance-wise good as they provide O(log n) time for search, insert and delete."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e.g.\n",
+    "\n",
+    "AVL: O(Log n) height\n",
+    "\n",
+    "Red-Black trees: O(Log n) height"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Degenerate/Pathological Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Tree where every internal node has one child. Such trees are performance-wise same as linked list."
    ]
   }
  ],
