--- a/Hash.ipynb
+++ b/Hash.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I. Handling Collisioin"
+    "## I. Handling Collision"
    ]
   },
   {
@@ -29,10 +29,220 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## II. Open Addressing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Method of resolving collision in hashing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Insert"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import collections as col\n",
+    "d = col.defaultdict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d['key'] = 'value'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'value'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['key']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Delete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del d['key']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(None, {})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Probing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h(x) = (Hash(x) + i) % HashTableSize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h0 = (Hash(x) + 0) % HashTableSize [If this is already full, try for h1]\n",
+    "\n",
+    "h1 = (Hash(x) + 1) % HashTableSize [If this is already full, try for h2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quadratic Probing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h(x) = (Hash(x) + i^2) % HashTableSize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h0 = (Hash(x) + 0) % HashTableSize [If this is already full, try for h1]\n",
+    "\n",
+    "h1 = (Hash(x) + 1) % HashTableSize [If this is already full, try for h2]\n",
+    "\n",
+    "h2 = (Hash(x) + 4) % HashTableSize [If this is already full, try for h3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Double Hashing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h(x) = (Hash(x) + i*Hash2(x)) % HashTableSize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "h0 = (Hash(x) + 0) % HashTableSize [If this is already full, try for h1]\n",
+    "\n",
+    "h1 = (Hash(x) + 1 * Hash2(x)) % HashTableSize [If this is already full, try for h2]\n",
+    "\n",
+    "h2 = (Hash(x) + 2 * Hash2(x)) % HashTableSize [If this is already full, try for h3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Performances\n",
+    "\n",
+    "1. Linear Probing\n",
+    "\n",
+    "\n",
+    "- Easy to implement\n",
+    "- Best cache performance\n",
+    "- Suffers from clustering\n",
+    "\n",
+    "\n",
+    "2. Quadratic Probing\n",
+    "\n",
+    "\n",
+    "- Average cache performance\n",
+    "- Suffers a lesser clustering than linear probing\n",
+    "\n",
+    "\n",
+    "3. Double Hashing\n",
+    "\n",
+    "\n",
+    "- Poor cache performance\n",
+    "- No clustering\n",
+    "- Requires more computation time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
