--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -44,6 +44,63 @@
     "    def __init__(self):\n",
     "        self.head = None"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## II. Insert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert at end\n",
+    "def insert_end(self, n):\n",
+    "    node = self.head\n",
+    "    while node.next:\n",
+    "        node = node.next\n",
+    "    node.next = n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert a new node at the beginning \n",
+    "def insert_beginning(self, new_data): \n",
+    "  \n",
+    "    # 1 & 2: Allocate the Node & \n",
+    "    #        Put in the data \n",
+    "    new_node = Node(new_data) \n",
+    "          \n",
+    "    # 3. Make next of new Node as head \n",
+    "    new_node.next = self.head \n",
+    "          \n",
+    "    # 4. Move the head to point to new Node  \n",
+    "    self.head = new_node "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert at index\n",
+    "def insert(self, prev_node, new_data):\n",
+    "    next_node = prev_node.next if prev_node.next else None\n",
+    "    \n",
+    "    prev_node.next = Node(new_data)\n",
+    "    prev_node.next.next = next_node\n",
+    "    \n",
+    "    return self.head"
+   ]
   }
  ],
  "metadata": {
