--- a/BinaryHeap.ipynb
+++ b/BinaryHeap.ipynb
@@ -131,6 +131,39 @@
     "h.delete(0)\n",
     "h.get_min()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## II. Binomial Heap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Binomial heap is a collectiona of binomial trees. Binomial tree of order 0 has 1 node. A binomial tree of order k can be constructed by taking two binomial trees of order k - 1 and making one as leftmost child of other."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Binomial Tree of order k has following properties.\n",
+    "\n",
+    "1. It has exactly 2k nodes.\n",
+    "2. It has depth as k.\n",
+    "3. There are exactly kCi nodes at depth i for i = 0, 1, . . . , k.\n",
+    "4. The root has degree k and children of root are themselves Binomial Trees with order k-1, k-2,.. 0 from left to right."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
