--- a/Queue.ipynb
+++ b/Queue.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,21 +28,21 @@
     "        self.queue.append(x)\n",
     "        \n",
     "    def pop(self): \n",
-    "        return self.queue.pop()"
+    "        return self.queue.pop(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,16 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
     "q.append(1)\n",
     "q.append(3)\n",
     "q.append(2)\n",
-    "q.pop()"
+    "q.popleft()"
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -165,13 +165,6 @@
     "print(q.pop())\n",
     "print(q.pop())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
