--- a/Stack.ipynb
+++ b/Stack.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "    #Removes element from the stack\n",
     "    def pop(self):\n",
     "        if self.arr:\n",
-    "            return self.arr.pop(0)\n",
+    "            return self.arr.pop()\n",
     "    \n",
     "    # Returns the first item in the stack\n",
     "    def peek(self):\n",
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,13 +103,20 @@
     "            node.next = n\n",
     "    \n",
     "    def pop(self):\n",
-    "        node = self.head\n",
-    "        if not node.next:\n",
+    "        root = self.head\n",
+    "        \n",
+    "        if root.next is None:\n",
     "            self.head = None\n",
-    "        else:\n",
-    "            next_node = node.next\n",
-    "            node.next = None\n",
-    "            self.head = next_node\n",
+    "            return root\n",
+    "        \n",
+    "        prev = None\n",
+    "        while root.next:\n",
+    "            prev = root\n",
+    "            root = root.next\n",
+    "\n",
+    "        popped = prev.next\n",
+    "        prev.next = None\n",
+    "        return popped\n",
     "    \n",
     "    def peek(self):\n",
     "        return self.head.val if self.head else -1"
@@ -117,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +133,7 @@
        "2"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,22 +146,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'next'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-62-270551b7deac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlinkedstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-60-33a7e4a9ddec>\u001b[0m in \u001b[0;36mpop\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mroot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mpopped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprev\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mprev\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mpopped\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'next'"
+     ]
+    }
+   ],
+   "source": [
+    "linkedstack.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1"
+       "2"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "linkedstack.pop()\n",
     "linkedstack.peek()"
    ]
   },
@@ -167,16 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "3"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +215,7 @@
     "s.append(3)\n",
     "s.append(4)\n",
     "s.append(5)\n",
-    "s.popleft()\n",
+    "s.pop()\n",
     "s[0]"
    ]
   }
